# origin_exercize

./: .gitignore  AGENTS.md  README.md  skills-lock.json
chat-backend/: .env.example  pyproject.toml
chat-backend/app/: agent.py  agui_bridge.py  config.py  main.py
chat-backend/tests/: test_agent.py  test_stream.py
core-backend/: .env.example  events.db  main.py  pyproject.toml
core-backend/app/: config.py  database.py  main.py  mcp_server.py  models.py  services.py
core-backend/tests/: conftest.py  test_mcp.py  test_services.py
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminPanel.tsx
frontend/src/components/agui/: AguiCapacityWidget.tsx  AguiEventWidget.tsx  AguiTicketWidget.tsx  GenerativeUiRenderer.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx
frontend/src/hooks/: useAguiStream.ts  useEvents.ts
frontend/src/tests/components/: AguiTicketWidget.test.tsx  GenerativeUiRenderer.test.tsx
frontend/src/tests/hooks/: useAguiStream.test.ts
