[project]
name = "core-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "fastmcp>=3.4.2",
    "pydantic-settings>=2.14.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-anyio>=0.0.0",
]
